--- a/package.json
+++ b/package.json
@@ -11,10 +11,25 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@expo-google-fonts/barlow": "^0.2.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@types/styled-components": "^5.1.28",
+    "@types/styled-components-react-native": "^5.2.3",
     "expo": "~49.0.12",
+    "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-normalize": "^1.0.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.20.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
