--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-media-controls": "^2.3.0",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -29,6 +30,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-video": "^5.2.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
@@ -38,6 +40,7 @@
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.23",
     "@types/react-native": "^0.72.2",
+    "@types/react-native-video": "^5.0.16",
     "jest": "^29.7.0",
     "jest-expo": "^49.0.0",
     "react-test-renderer": "^18.2.0",
