--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
   },
   "dependencies": {
     "@expo-google-fonts/barlow": "^0.2.3",
+    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components": "^5.1.28",
     "@types/styled-components-react-native": "^5.2.3",
     "expo": "~49.0.12",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
+    "expo-video-player": "^2.2.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-media-controls": "^2.3.0",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -30,7 +32,6 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
-    "react-native-video": "^5.2.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
