--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "eadguru",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@expo-google-fonts/barlow": "^0.2.3",
-    "@react-native-community/slider": "^4.4.3",
+    "@expo/config-plugins": "~7.2.2",
+    "@expo/metro-config": "~0.10.0",
+    "@expo/prebuild-config": "~6.2.4",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/styled-components": "^5.1.28",
@@ -21,14 +24,13 @@
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
-    "expo-video-player": "^2.2.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-normalize": "^1.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.20.0",
+    "react-native-screens": "~3.22.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
